--- a/PreOrclFrontEnd/Views/Casos/Create.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Create.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/templateAdmin/assets/css/cs-skin-elastic.css">
     <link rel="stylesheet" href="~/templateAdmin/assets/css/style.css">
     <link rel="stylesheet" href="~/templateAdmin/assets/css/lib/chosen/chosen.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css" />
 }
 <div class="breadcrumbs">
     <div class="breadcrumbs-inner">
@@ -51,7 +52,7 @@
                         <strong>Crear Caso</strong> <small></small>
                     </div>
 
-                    <form asp-action="Create" enctype="multipart/form-data" class="submit-formdata" @*asp-antiforgery="true"*@ id="createForm" method="post" >
+                    <form asp-action="Create" enctype="multipart/form-data" class="submit-formdata" @*asp-antiforgery="true" *@ id="createForm" method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="card-body card-block">
                             <div class="form-group">
@@ -66,7 +67,7 @@
                                 <label asp-for="Casos.FechaApertura"></label>
                                 <div class="input-group">
                                     <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-                                    <input asp-for="Casos.FechaApertura" class="form-control">
+                                    <input asp-for="Casos.FechaApertura" type="text" disabled="disabled" class="form-control date-time-getnow">
                                 </div>
                                 <span asp-validation-for="Casos.FechaApertura" class="text-danger"></span>
                             </div>
@@ -151,34 +152,34 @@
                                     <span asp-validation-for="Documentos" class="text-danger"></span>
                                 </div>
                             </div>
-                                <div class="row form-group">
-                                    <div class="col col-md-3">
-                                        <label asp-for="Casos.Tipo" class="form-control-label"></label>
-                                    </div>
-                                    <div class="col col-md-9">
-                                        <div class="form-check-inline form-check">
-                                            @foreach (var itemTipos in listaTipos)
-                                            {
-
-                                                <label for="inline-radio@listaTipos.GetEnumerator()" class="form-check-label ">
-                                                    <input asp-for="Casos.Tipo" type="radio" value="@itemTipos.Value" class="form-check-input">@itemTipos.Text&nbsp;&nbsp;&nbsp;
-                                                </label>
-
-                                            }
-
-                                        </div>
-                                        <span asp-validation-for="Casos.Tipo" class="text-danger"></span>
-                                    </div>
+                            <div class="row form-group">
+                                <div class="col col-md-3">
+                                    <label asp-for="Casos.Tipo" class="form-control-label"></label>
                                 </div>
+                                <div class="col col-md-9">
+                                    <div class="form-check-inline form-check">
+                                        @foreach (var itemTipos in listaTipos)
+                                        {
 
+                                            <label for="inline-radio@listaTipos.GetEnumerator()" class="form-check-label ">
+                                                <input asp-for="Casos.Tipo" type="radio" value="@itemTipos.Value" class="form-check-input">@itemTipos.Text&nbsp;&nbsp;&nbsp;
+                                            </label>
 
-                                <div class="row form-group">
-                                    <div class="col-sm-12 text-right">
-                                        <input type="button" onclick="GuardarNotificacion('.submit-formdata','@Url.Action("Create")','@Url.Action("Index")')" value="Guardar" class="btn btn-default" />
+                                        }
+
                                     </div>
+                                    <span asp-validation-for="Casos.Tipo" class="text-danger"></span>
                                 </div>
                             </div>
-</form>
+
+
+                            <div class="row form-group">
+                                <div class="col-sm-12 text-right">
+                                    <input type="button" onclick="GuardarNotificacion('.submit-formdata','@Url.Action("Create")','@Url.Action("Index")')" value="Guardar" class="btn btn-default" />
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
 
@@ -196,12 +197,14 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/lib/Microsoft.jQuery.Unobtrusive.Ajax/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/js/custoSweetAlertAjax.js"></script>
- 
+
     <script src="~/templateAdmin/assets/js/lib/chosen/chosen.jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
+   <script src="~/js/custoDateTimePicker.js"></script>
     <script>
         jQuery(document).ready(function () {
             jQuery(".standardSelect").chosen({
-            
+
                 no_results_text: "No se encontraron registros!",
                 width: "100%"
             });
@@ -210,8 +213,9 @@
             jQuery(".standardSelect").css("visibility", "hidden");
             jQuery(".standardSelect").css("position", "absolute");
 
-
-
+        
+        
+            
         });
     </script>
 
