--- a/PreOrclFrontEnd/Views/Actividades/Edit.cshtml
+++ b/PreOrclFrontEnd/Views/Actividades/Edit.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/templateAdmin/assets/css/cs-skin-elastic.css">
     <link rel="stylesheet" href="~/templateAdmin/assets/css/style.css">
     <link rel="stylesheet" href="~/templateAdmin/assets/css/lib/chosen/chosen.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css" />
 }
 <div class="breadcrumbs">
     <div class="breadcrumbs-inner">
@@ -54,17 +55,17 @@
                     <form asp-action="Edit" asp-antiforgery="true" id="createForm" data-ajax-begin="onBegin" data-ajax-complete="onComplete"
                           data-ajax-failure="onFailed" data-ajax-success="onSuccess" data-ajax="true" data-ajax-method="POST">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <input asp-for="Actividades.IdActividad" type="hidden"/>
+                        <input asp-for="Actividades.IdActividad" type="hidden" />
                         <input asp-for="Actividades.CreatedAt" type="hidden" />
                         <input asp-for="Actividades.Inactivo" type="hidden" />
-                        <input asp-for="Actividades.IdEvento" type="hidden"/>
+                        <input asp-for="Actividades.IdEvento" type="hidden" />
                         <div class="card-body card-block">
                             <div class="row form-group">
                                 <div class="col-md-6">
                                     <label asp-for="Actividades.StartTime"></label>
                                     <div class="input-group">
                                         <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-                                        <input asp-for="Actividades.StartTime" class="form-control">
+                                        <input asp-for="Actividades.StartTime" type="text" class="form-control date-time">
                                     </div>
                                     <span asp-validation-for="Actividades.StartTime" class="text-danger"></span>
                                 </div>
@@ -72,19 +73,19 @@
                                     <label asp-for="Actividades.EndTime"></label>
                                     <div class="input-group">
                                         <div class="input-group-addon"><i class="fa fa-calendar"></i></div>
-                                        <input asp-for="Actividades.EndTime" class="form-control">
+                                        <input asp-for="Actividades.EndTime" type="text" class="form-control date-time">
                                     </div>
                                     <span asp-validation-for="Actividades.EndTime" class="text-danger"></span>
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                    <label asp-for="Actividades.NombreActividad"></label>
-                                    <div class="input-group">
+                                <label asp-for="Actividades.NombreActividad"></label>
+                                <div class="input-group">
 
-                                        <textarea asp-for="Actividades.NombreActividad" class="form-control"></textarea>
-                                    </div>
-                                    <span asp-validation-for="Actividades.NombreActividad" class="text-danger"></span>
+                                    <textarea asp-for="Actividades.NombreActividad" class="form-control"></textarea>
+                                </div>
+                                <span asp-validation-for="Actividades.NombreActividad" class="text-danger"></span>
                             </div>
 
                             <div class="row form-group">
@@ -99,48 +100,48 @@
                                     <label asp-for="Actividades.Costo"></label>
                                     <div class="input-group">
 
-                                        <input asp-for="Actividades.Costo" class="form-control"/>
+                                        <input asp-for="Actividades.Costo" class="form-control text-right moneda" />
                                     </div>
                                     <span asp-validation-for="Actividades.Costo" class="text-danger"></span>
                                 </div>
                             </div>
 
-                                <div class="form-group">
-                                    <label asp-for="Actividades.IdResponsable"></label>
-                                    <select asp-for="Actividades.IdResponsable" data-placeholder="Seleccionar" asp-items="ViewBag.listaAbogados" class="standardSelect" tabindex="1">
-                                        <option disabled value="-1" selected>Seleccionar</option>
-                                    </select>
-                                    <span asp-validation-for="Actividades.IdResponsable" class="text-danger"></span>
-                                </div>
+                            <div class="form-group">
+                                <label asp-for="Actividades.IdResponsable"></label>
+                                <select asp-for="Actividades.IdResponsable" data-placeholder="Seleccionar" asp-items="ViewBag.listaAbogados" class="standardSelect" tabindex="1">
+                                    <option disabled value="-1" selected>Seleccionar</option>
+                                </select>
+                                <span asp-validation-for="Actividades.IdResponsable" class="text-danger"></span>
+                            </div>
 
-                                <div class="form-group">
-                                    <label asp-for="IdAsistentes"></label>
-                                    <select asp-for="IdAsistentes" data-placeholder="Seleccionar" multiple="true" asp-items="ViewBag.listaAbogados" class="standardSelect" tabindex="1"></select>
-                                    <span asp-validation-for="IdAsistentes" class="text-danger"></span>
-                                </div>
+                            <div class="form-group">
+                                <label asp-for="IdAsistentes"></label>
+                                <select asp-for="IdAsistentes" data-placeholder="Seleccionar" multiple="true" asp-items="ViewBag.listaAbogados" class="standardSelect" tabindex="1"></select>
+                                <span asp-validation-for="IdAsistentes" class="text-danger"></span>
+                            </div>
 
-                                <div class="form-group">
-                                    <label asp-for="Actividades.IdCalendario"></label>
-                                    <select asp-for="Actividades.IdCalendario" data-placeholder="Seleccionar" asp-items="ViewBag.listaCalendario" class="standardSelect" tabindex="1">
-                                        <option disabled value="-1" selected>Seleccionar</option>
-                                    </select>
-                                    <span asp-validation-for="Actividades.IdCalendario" class="text-danger"></span>
-                                </div>
+                            <div class="form-group">
+                                <label asp-for="Actividades.IdCalendario"></label>
+                                <select asp-for="Actividades.IdCalendario" data-placeholder="Seleccionar" asp-items="ViewBag.listaCalendario" class="standardSelect" tabindex="1">
+                                    <option disabled value="-1" selected>Seleccionar</option>
+                                </select>
+                                <span asp-validation-for="Actividades.IdCalendario" class="text-danger"></span>
+                            </div>
 
-                                <div class="form-group">
-                                    <label asp-for="Actividades.Estado"></label>
-                                    <select asp-for="Actividades.Estado" data-placeholder="Seleccionar" asp-items="ViewBag.listaEstadoActividad" class="standardSelect" tabindex="1">
-                                        <option disabled value="-1" selected>Seleccionar</option>
-                                    </select>
-                                    <span asp-validation-for="Actividades.Estado" class="text-danger"></span>
-                                </div>
+                            <div class="form-group">
+                                <label asp-for="Actividades.Estado"></label>
+                                <select asp-for="Actividades.Estado" data-placeholder="Seleccionar" asp-items="ViewBag.listaEstadoActividad" class="standardSelect" tabindex="1">
+                                    <option disabled value="-1" selected>Seleccionar</option>
+                                </select>
+                                <span asp-validation-for="Actividades.Estado" class="text-danger"></span>
+                            </div>
 
-                                <div class="row form-group">
-                                    <div class="col-sm-12 text-right">
-                                        <input type="button" value="Guardar" onclick="GuardarNotificacion('#createForm','@Url.Action("Edit")','@Url.Action("Index")')" class="btn btn-default" />
-                                    </div>
+                            <div class="row form-group">
+                                <div class="col-sm-12 text-right">
+                                    <input type="button" value="Guardar" onclick="GuardarNotificacion('#createForm','@Url.Action("Edit")','@Url.Action("Index")')" class="btn btn-default" />
                                 </div>
                             </div>
+                        </div>
                     </form>
                 </div>
             </div>
@@ -161,6 +162,9 @@
     <script src="~/js/custoSweetAlertAjax.js"></script>
 
     <script src="~/templateAdmin/assets/js/lib/chosen/chosen.jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-maskmoney/3.0.2/jquery.maskMoney.min.js"></script>
+    <script src="~/js/custoDateTimePicker.js"></script>
     <script>
         jQuery(document).ready(function () {
             jQuery(".standardSelect").chosen({
@@ -173,7 +177,7 @@
             jQuery(".standardSelect").css("visibility", "hidden");
             jQuery(".standardSelect").css("position", "absolute");
 
-
+            jQuery('.moneda').maskMoney();
 
         });
 
@@ -193,7 +197,7 @@
                     for (var i = 0; i < data.length; i++) {
                         s += '<option value="' + data[i].calendar.id + '">' + data[i].calendar.name + '</option>';
                     }
-                    jQuery("#Actividades_IdCalendario").html(s);  
+                    jQuery("#Actividades_IdCalendario").html(s);
 
                     jQuery("#Actividades_IdCalendario").trigger("chosen:updated");
 
@@ -214,7 +218,7 @@
 
                 });
         }
-       
+
     </script>
 
 }
