Se guardan cambios

--- a/PreOrclFrontEnd/Views/Casos/Create.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Create.cshtml
@@ -215,7 +215,7 @@
             jQuery(".standardSelect").css("position", "absolute");
 
             jQuery('.moneda').maskMoney();  
-
+            jQuery()    
 
         });
     </script>
